- fixed wrong size of callout title - run build and deploy

--- a/src/components/callout/_callout.scss
+++ b/src/components/callout/_callout.scss
@@ -43,6 +43,7 @@
 
   &__title {
     @include font-stack('heading');
+    @include font-size('md');
     margin: 0;
   }
 }
